# skel-crypto-agent

./: .env.example  .gitignore  README.md  main-vercel.py  main.py  pyproject.toml  requirements.txt  start.sh  vercel.json
src/sentient_narrative_agent/: agent.py
src/sentient_narrative_agent/config/: settings.py
src/sentient_narrative_agent/providers/: agent_provider.py  base_crypto_provider.py  base_crypto_schemas.py  base_news_provider.py  base_news_schemas.py  coingecko_provider.py  cryptopanic_provider.py  model.py
src/sentient_narrative_agent/utils/: agent_utils.py  event.py  logger.py
src/skel_crypto_agent/: agent.py
src/skel_crypto_agent/config/: settings.py
src/skel_crypto_agent/providers/: agent_provider.py  fiat_converter.py  gas_service.py  price_service.py  project_analyzer.py  web_search.py
src/skel_crypto_agent/providers/price_sources/: base.py  binance.py  bybit.py  coingecko.py  coinmarketcap.py  defillama.py
src/skel_crypto_agent/utils/: event.py  logger.py
